2001-09-28  Gonzalo Paniagua Javier <gonzalo@torresquevedo.hispalinux.es>

	* gda-mysql-connection.c: set correctly error messages when failing
	because of incompatible options in the connection string

2001-07-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-connection.c (gda_mysql_connection_open_schema): return
	a GdaError if we don't support the schema

	(gda_mysql_connection_open): use a GdaQuarkList to parse the
	connection string

2001-06-28  Vivien Malerba <malerba@gnome-db.org>

	* started to implement the schema_types and data types management

2001-05-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-recordset.c (fill_field_values): also manage
	BLOB fields

2001-03-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-connection.c (gda_mysql_connection_supports): respond to more
	values in the GDA_Connection_Feature parameter
	* gda-mysql-command.c: added support for command_type in
	gda_mysql_command_execute: fixes bug #51720

2000-10-21  Rodrigo Moya <rodrigo@linuxave.net>

	* added missing <time.h>, which was left over after
	the GNOME headers clean up